--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Codewars</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>CodeWars</title>
+    <link rel='stylesheet' href='stylesheets/style.css' />
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <h1>Codewars</h1>
-    <h2>코딩 전쟁이 일어난다. 모든 대원들, 전투 준비!</h2>
+    <div class="codewars row">
+      <div class="side-bar">
+        <h1 class="side-bar__header__title">Kata</h1>
+      
+        <ul class="level-selection">
+          <li class="level-selection__level"><a href="/">All</a></li>
+          <li class="level-selection__level"><a href="/?level=1">Level 1</a></li>
+          <li class="level-selection__level"><a href="/?level=2">Level 2</a></li>
+          <li class="level-selection__level"><a href="/?level=3">Level 3</a></li>
+        </ul>
+      </div>
 
-    <ul class="tabs">
-      <li>Level 1</li>
-      <li>Level 2</li>
-      <li>Level 3</li>
-    </ul>
-
-    <ul class="problems">
-      <li>
-        <div>피보나치 수열</div>
-        <div>정답자: 15명</div>
-        <div>난이도: Level 1</div>
-      </li>
-      <li>
-        <div>서울에서 김서방 찾기</div>
-        <div>정답자: 11명</div>
-        <div>난이도: Level 2</div>
-      </li>
-      <li>
-        <div>수박수박수박수박수</div>
-        <div>정답자: 12명</div>
-        <div>난이도: Level 2</div>
-      </li>
-      <li>
-        <div>하샤드 수</div>
-        <div>정답자: 5명</div>
-        <div>난이도: Level 3</div>
-      </li>
-    </ul>
+      <ul class="katas">
+        <% katas.forEach((kata, index) => {%>
+          <li class="katas__kata">
+            <a href="problems/<%= kata.id %>">
+              <div class="katas__kata--title"><%= kata.title %></div>
+              <div class="katas__kata--solution">정답자: <%= kata.solution_count %>명</div>
+              <div class="katas__kata--difficulty">난이도: <%= kata.difficulty_level %></div>
+            </a>
+          </li>
+        <% })%>
+      </ul>
+    </div>
+    <script src="/javascripts/index.js"></script>
   </body>
 </html>
