--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -160,7 +160,7 @@ a {
     &--editor {
       display: flex;
       flex-direction: column;
-      padding: 3rem;
+      padding: 3rem 3rem 0px 3rem;
       position: relative;
 
       & .solution-label {
@@ -175,21 +175,144 @@ a {
         height: 3rem;
         width: 80rem;
         padding-left: 1rem;
-        font-weight: 200;
+        font-weight: 300;
       }
     }
 
     &--code {
       background-color: #131414;
       width: 80rem;
-      height: 30rem;
+      height: 35rem;
       border: none;
       color: #ffffff;
       letter-spacing: 1px;
+      font-size: 1.5rem;
+      font-weight: 300;
+      padding: 1.5rem 2rem;
 
       &:focus {
         outline: none;
       }
+    }
+  }
+
+  &__result-label {
+    top: 0px;
+    font-size: 1.5rem;
+    letter-spacing: .7px;
+    background-color: rgba(0,0,0,0.2) !important;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    height: 3rem;
+    width: 80rem;
+    padding-left: 1rem;
+    font-weight: 300;
+    margin-top: 2rem;
+  }
+
+  &__feedback {
+    padding-top: 1.5rem;
+    padding-left: 1.5rem;
+    background-color: #131414;
+    width: 80rem;
+    height: 15rem;
+    border: none;
+    color: #ffffff;
+    letter-spacing: 1px;
+    position: relative;
+    flex-grow: 1;
+    
+    &--success {
+      font-size: 1.2rem;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
+
+    & span {
+
+      & p {
+        transform: translateY(1px);
+      }
+    }
+
+    &--icon-feedback {
+      width: 1.7rem;
+      height: 1.7rem;
+      color: #7c9a44;
+      margin-right: 8px;
+
+      &-failed {
+        color: #c05c48;
+        width: 1.7rem;
+        height: 1.7rem;
+        color: #c05c48;
+        margin-right: 8px;
+      }
+    }
+
+    &--icon-result {
+      margin-right: .7rem;
+      display: inline-block;
+
+      &-failed {
+        color: #c05c48;
+      }
+    }
+
+    &--detail {
+      font-size: 1.3rem;
+      font-weight: 300;
+      margin-bottom: 7px;
+      margin-left: 2.2rem;
+      color: #67b04b;
+
+      & p {
+        display: inline-block;
+        transform: translateY(-3px);
+      }
+    }
+
+    &--test-case {
+      display: inline-block !important;
+    }
+
+    &--response {
+      font-size: 1.2rem;
+      display: inline-block;
+    }
+
+    &--failure {
+      font-size: 1.2rem;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
+  }
+
+  &__failed {
+    font-size: 1.3rem;
+    font-weight: 300;
+    margin-bottom: 1.5rem;
+    margin-left: 2.2rem;
+    color: #c05c48;
+
+    &-result {
+      display: block;
+      padding-left: 2rem;
+    }
+
+    &--test-case {
+      display: inline-block !important;
+      margin-bottom: 7px;
+      transform: translateY(-2px);
+    }
+
+    &--icon-result {
+      margin-right: 3px;
     }
   }
 }
