--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -40,10 +40,14 @@ a {
 }
 
 .side-bar {
-  width: 25rem;
+  width: 32rem;
   min-height: 70rem;
   padding: 2rem 2rem 2rem 3rem;
   background-color: rgba(0,0,0,0.2);
+
+  &__level {
+    margin-bottom: 1.5rem;
+  }
 }
 
 .side-bar__header__title {
@@ -72,6 +76,7 @@ a {
 
 .level-selection__level {
   margin-bottom: 1.5rem;
+  display: flex;
 
   & a {
     width: 7rem;
@@ -110,6 +115,9 @@ a {
 
     &--title {
       transition: all .3s;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
 
       &:hover {
         color: #6795de;
@@ -137,10 +145,17 @@ a {
 
   &__description {
     font-size: 1.7rem;
+
+    &.side-bar {
+      padding-left: 7px;
+      padding-right: 7px;
+      font-size: 1.4rem;
+    }
   }
 
   &__form {
     text-align: right;
+    width: 70rem;
   }
 
   &__submit {
@@ -150,7 +165,9 @@ a {
     height: 3rem;
     border-radius: 4px;
     margin-top: 1.7rem;
+    margin-right: 1rem;
     align-self: flex-end;
+    display: inline-block;
   }
 
   &__content {
@@ -162,6 +179,7 @@ a {
       flex-direction: column;
       padding: 3rem 3rem 0px 3rem;
       position: relative;
+      width: 70rem;
 
       & .solution-label {
         position: absolute;
@@ -173,21 +191,20 @@ a {
         justify-content: left;
         align-items: center;
         height: 3rem;
-        width: 80rem;
+        width: 70rem;
         padding-left: 1rem;
         font-weight: 300;
       }
     }
 
     &--code {
-      background-color: #131414;
-      width: 80rem;
+      background-color: #131414;  
+      width: 70rem;
       height: 35rem;
       border: none;
       color: #ffffff;
       letter-spacing: 1px;
       font-size: 1.5rem;
-      font-weight: 300;
       padding: 1.5rem 2rem;
 
       &:focus {
@@ -205,7 +222,7 @@ a {
     justify-content: left;
     align-items: center;
     height: 3rem;
-    width: 80rem;
+    width: 70rem;
     padding-left: 1rem;
     font-weight: 300;
     margin-top: 2rem;
@@ -215,13 +232,21 @@ a {
     padding-top: 1.5rem;
     padding-left: 1.5rem;
     background-color: #131414;
-    width: 80rem;
+    width: 70rem;
     height: 15rem;
     border: none;
     color: #ffffff;
     letter-spacing: 1px;
     position: relative;
     flex-grow: 1;
+
+    & ul {
+      overflow: scroll;
+    }
+
+    &--basic-test {
+      color: #676b6d;
+    }
     
     &--success {
       font-size: 1.2rem;
@@ -268,6 +293,7 @@ a {
       margin-bottom: 7px;
       margin-left: 2.2rem;
       color: #67b04b;
+      line-height: 1.8rem;
 
       & p {
         display: inline-block;
@@ -315,4 +341,70 @@ a {
       margin-right: 3px;
     }
   }
+}
+
+.btn-to-list {
+  text-align: right;
+  width: 70rem;
+
+  & button {
+    border: none;
+    width: 10rem;
+    height: 3rem;
+    border-radius: 4px;
+    margin-top: 1.7rem;
+    align-self: flex-end;
+    display: inline-block;
+    border: 1px solid #6795de;
+    color: #6795de;
+    background-color: transparent;
+    margin-right: 1rem;
+    transition: background-color .2s;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #0b0c0c;
+    }
+  }
+}
+
+.level {
+  width: 6.5rem;
+  height: 3.5rem;
+  border: 2px solid #ecb613;
+  display: inline-block;
+  margin-right: 1rem;
+  font-size: 1.5rem;
+  color: #ecb613;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color .2s;
+  font-weight: 300;
+
+  &-all {
+    color: #ffffff;
+    border: 2px solid #ffffff;
+
+    &:hover {
+      background-color: #ffffff !important;
+    }
+  }
+  
+  &:hover {
+    background-color: #ecb613;
+    color: rgba(20,20,20,0.7);
+    font-weight: 400;
+  }
+
+  &-small {
+    width: 4.7rem;
+    height: 2.5rem;
+    font-size: 1.2rem;
+  }
+}
+
+.CodeMirror {
+  font-size: 1.7rem;
+  width: 70rem;
 }
