--- a/views/failure.ejs
+++ b/views/failure.ejs
@@ -4,10 +4,11 @@
     <title>Kata</title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
     <script src="lib/codemirror.js"></script>
     <link rel="stylesheet" href="lib/codemirror.css">
     <script src="mode/javascript/javascript.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="stylesheets/tomorrow-night-bright.css">
   </head>
   <body>
     <div class="kata row">
