--- a/views/kata.ejs
+++ b/views/kata.ejs
@@ -11,17 +11,17 @@
   <body>
     <div class="kata row">
       <header class="kata__hero">
-        <h1 class="kata__title"><%= kata.title %></h1>
+        <h1 class="kata__title"><%= problem.title %></h1>
       </header>
       <div class="kata__content">
         <div class="kata__description side-bar">
-          <span class="level side-bar__level">Level <%= kata.difficulty_level %></span>
-          <p class=""><%= kata.description %></p>
+          <span class="level side-bar__level">Level <%= problem.difficulty_level %></span>
+          <p class=""><%= problem.description %></p>
         </div>
         <div class="kata__content--editor">
           <span class="solution-label">Solution :</span>
           <textarea form="user-form" class="kata__content--code codemirror" name="solution">function solution(num) {}</textarea>
-          <form action="/problems/<%= kata.id %>" id="user-form" method="post" class="kata__form">
+          <form action="/problems/<%= problem.id %>" id="user-form" method="post" class="kata__form">
             <input type="submit" class="kata__submit">
           </form>
           <span class="kata__result-label">Basic Test :</span>
@@ -29,7 +29,7 @@
               <span class="kata__feedback--success">
               </span>
               <ul>
-                <% tests.forEach(test => { %>
+                <% problem.tests.forEach(test => { %>
                   <li class="kata__feedback--detail">
                     <ion-icon name="checkmark-circle" class="kata__feedback--icon-result"></ion-icon>
                     <p class="kata__feedback--basic-test"><%= test.code %> should be equivalent to <%= test.solution %></p>
