--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,7 +54,7 @@ a {
     left: -2px;
     width: 3rem;
     height: 3rem;
-    background: url(http://www.softlab.ntua.gr/~nickie/images/logo/codewars.png);
+    background: url(/codewars.png);
     background-size: contain; }
 
 .level-selection {
@@ -106,11 +106,16 @@ a {
     margin-left: 3rem;
     margin-bottom: 2rem; }
   .kata__description {
-    font-size: 1.7rem; }
+    font-size: 1.3rem;
+    display: inline-block; }
     .kata__description.side-bar {
       padding-left: 7px;
       padding-right: 7px;
-      font-size: 1.4rem; }
+      font-size: 1.4rem;
+      float: left; }
+    .kata__description--question {
+      line-height: 150%;
+      letter-spacing: .7px; }
   .kata__form {
     text-align: right;
     width: 70rem; }
@@ -123,12 +128,13 @@ a {
     margin-top: 1.7rem;
     margin-right: 1rem;
     align-self: flex-end;
-    display: inline-block; }
+    display: inline-block;
+    cursor: pointer; }
   .kata__content {
-    display: flex;
+    display: block;
     position: relative; }
     .kata__content--editor {
-      display: flex;
+      display: inline-block;
       flex-direction: column;
       padding: 3rem 3rem 0px 3rem;
       position: relative;
@@ -169,18 +175,21 @@ a {
     width: 70rem;
     padding-left: 1rem;
     font-weight: 300;
-    margin-top: 2rem; }
+    margin-top: 2rem;
+    display: flex; }
   .kata__feedback {
     padding-top: 1.5rem;
     padding-left: 1.5rem;
     background-color: #131414;
     width: 70rem;
-    height: 15rem;
+    height: 26rem;
     border: none;
     color: #ffffff;
     letter-spacing: 1px;
     position: relative;
-    flex-grow: 1; }
+    flex-grow: 1;
+    display: inline-block;
+    overflow: scroll; }
     .kata__feedback ul {
       overflow: scroll; }
     .kata__feedback--basic-test {
@@ -248,7 +257,10 @@ a {
 
 .btn-to-list {
   text-align: right;
-  width: 70rem; }
+  width: 70rem;
+  position: absolute;
+  right: 17rem;
+  top: 33rem; }
   .btn-to-list button {
     border: none;
     width: 10rem;
@@ -296,3 +308,48 @@ a {
 .CodeMirror {
   font-size: 1.7rem;
   width: 70rem; }
+
+.feedback-panel {
+  display: inline-block;
+  width: 70rem;
+  height: 30rem;
+  padding: 1rem 3rem 0rem 3rem; }
+
+.error {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center; }
+  .error__modal {
+    width: 50rem;
+    height: 30rem;
+    background-color: rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 5rem;
+    font-weight: 300;
+    box-shadow: 5px 5px 25px 0 rgba(255, 255, 255, 0.1);
+    border-radius: 5px; }
+    .error__modal--status {
+      font-size: 4rem;
+      margin-bottom: 1rem; }
+    .error__modal--message {
+      font-size: 2.7rem; }
+
+.btn-to-main {
+  text-align: right; }
+  .btn-to-main button {
+    width: 13rem;
+    height: 3.8rem;
+    border-radius: 3px;
+    background-color: transparent;
+    border: none;
+    box-shadow: 5px 5px 25px 2px rgba(255, 255, 255, 0.1);
+    color: #676b6d;
+    font-size: 1.5rem;
+    cursor: pointer; }
+    .btn-to-main button:focus {
+      outline: none; }
