--- a/views/kata.ejs
+++ b/views/kata.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="lib/codemirror.css">
     <script src="mode/javascript/javascript.js"></script>
     <link rel="stylesheet" href="stylesheets/tomorrow-night-bright.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
+    <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   </head>
   <body>
     <div class="kata row">
@@ -14,30 +16,19 @@
         <h1 class="kata__title"><%= problem.title %></h1>
       </header>
       <div class="kata__content">
-        <div class="kata__description side-bar">
-          <span class="level side-bar__level">Level <%= problem.difficulty_level %></span>
-          <p class=""><%= problem.description %></p>
-        </div>
-        <div class="kata__content--editor">
-          <span class="solution-label">Solution :</span>
-          <textarea form="user-form" class="kata__content--code codemirror" name="solution">function solution(num) {}</textarea>
-          <form action="/problems/<%= problem.id %>" id="user-form" method="post" class="kata__form">
-            <input type="submit" class="kata__submit">
-          </form>
+        <%- include('appBasicForm', { problem }) %>
+        <div class="feedback-panel">
           <span class="kata__result-label">Basic Test :</span>
           <div class="kata__feedback">
-              <span class="kata__feedback--success">
-              </span>
-              <ul>
-                <% problem.tests.forEach(test => { %>
-                  <li class="kata__feedback--detail">
-                    <ion-icon name="checkmark-circle" class="kata__feedback--icon-result"></ion-icon>
-                    <p class="kata__feedback--basic-test"><%= test.code %> should be equivalent to <%= test.solution %></p>
-                  </li>
-                <% }) %>
-              </ul>
-            </div>
-        </div>
+            <span class="kata__feedback--success"></span>
+            <ul>
+              <% problem.tests.forEach(test => { %>
+                <li class="kata__feedback--detail">
+                  <p class="kata__feedback--basic-test"><%= test.code %> should be equivalent to <%= test.solution %></p>
+                </li>
+              <% }) %>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
