Upload gif file

--- a/views/kata.ejs
+++ b/views/kata.ejs
@@ -18,6 +18,7 @@
       <div class="kata__content">
         <%- include('appBasicForm', { problem }) %>
         <div class="feedback-panel">
+          <a href="/" class="btn-to-list"><button>리스트로 돌아가기</button></a>
           <span class="kata__result-label">Basic Test :</span>
           <div class="kata__feedback">
             <span class="kata__feedback--success"></span>
